Move signup backend to next server

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "jose": "^5.4.0",
     "next": "14.2.3",
     "pg": "^8.12.0",
